src/johan_production/objects/yk__YubiKeyLogEntry__c.object
<CustomObject>
    <fields>
        <fullName>yk__OTPentered__c</fullName>
        <label>OTP entered</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yk__Outcome__c</fullName>
        <label>Outcome</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yk__User__c</fullName>
        <label>User</label>
        <type>Email</type>
    </fields>
    <label>YubiKey Log Entry</label>
    <nameField>
        <displayFormat>YkLog-{0000000000}</displayFormat>
        <label>YubiKey Log Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>YubiKey Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>